2006-11-01 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/sdss/*: Added skeleton of a SDSS timeline web page and
	  the backend generator to support a future SDSS widget.
	  
2006-10-18 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/Plastic Monitor.wdgt/*: Fixed display problems.
	
2006-10-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/Plastic Monitor.wdgt/*: Added new widget.
	
2006-09-04 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/ogle/cron/ogle_parse.pl: Added an XML event output for use
          by the new OGLE timeline OSX widget.

        * widgets/OGLE Timline.wdgt/*: New OGLE Timeline widget which
          displays a timeline by fetching, doesn't yet automatically 
          update.

2006-09-01 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/ivoa_victoria06/*: Added the IVOA Victoria PLASTIC demo into
	  the CVS. Included a JAR of the PLASTIC Hub it worked with at the
	  time to protect against changes in the standard.

	* www/estar/cgi-bin/status.cgi: Fixed FTS/FTN webcams
	
2006-08-30 Alasdair Allan <aa@astro.ex.ac.uk>

        * widgets/Telescope Status.wdgt/Update.js: Added random number to 
	  the end of the webcam images, avoids caching problems.
	  
2006-08-30 Alasdair Allan <aa@astro.ex.ac.uk>

        * widgets/Telescope Status.wdgt/*: Added the skeleton of a working
          Apple Dashboard widget to monitor Robonet-1.0 status.

2006-08-24 Alasdiar Allan <aa@astro.ex.ac.uk>

        * www/ogle/*: Added OGLE Timeline pages to CVS archive
	
	* www/*: Updated the rest of the wesite in the archive to correspond 
	  to the live version deployed onto estar3.astro.ex.ac.uk
        
        * startup/*: Updated startup scripts to account for FTS
 
2006-08-10 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/test_servers.pl: Added FTS support.
	
	* widgets/eSTAR Status.wdgt/*: Added FTS support.

2006-06-29 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/ogle_parsemail.pl: Added meta.ref.url to the photometry data.